[package]
name = "banano_rs"
version = "0.1.0"
authors = ["Wrap That Potassium <wrap-that-potassium@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = { version = "1.0.64" }
rust_decimal = { version = "1.13.0" }
blake2 = "0.9.1"
ed25519-dalek = "1.0.1"
async-trait = "0.1.48"
log = "0.4.14"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1", features = ["full"] }

