[package]
name = "banano_rs"
version = "0.1.0"
authors = ["Wrap That Potassium <wrap-that-potassium@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9.4"
bigdecimal = { version = "0.2.0", features = ["serde"] }
once_cell = "1.8.0"
doc-comment = "0.3.3"
hex = "0.4.2"
bitvec = "0.22.3"
blake2 = "0.9.1"
byteorder = "1.4.3"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"
ed25519-dalek = "1.0.1"
curve25519-dalek = "1.2.1"
async-trait = "0.1.48"
log = "0.4.14"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.38"
hex-literal = "0.3.1"
